add new short url

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./src/*"],
       "@app/ui/components/*": ["./src/app/ui/components/*"],
       "@app/ui/layouts/*": ["./src/app/ui/layouts/*"],
+      "@icons/*": ["./src/app/ui/components/Icons/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
