feat(ImageSlider, Header): Add slider component into home page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@app/ui/components/*": ["./src/app/ui/components/*"],
       "@app/ui/layouts/*": ["./src/app/ui/layouts/*"],
       "@icons/*": ["./src/app/ui/components/Icons/*"],
+      "@public/*": ["./public/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
