--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@nosotros/*": ["./src/app/[lang]/(nosotros)/*"],
       "@servicios/*": ["./src/app/[lang]/(servicios)/*"],
       "@globals/*": ["./src/app/[lang]/globals.css"],
+      "@hooks/*": ["./src/app/hooks/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
