--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@globals/*": ["./src/app/[lang]/globals.css"],
       "@hooks/*": ["./src/app/hooks/*"],
       "@routes/*": ["./src/routes/*"],
+      "@others/*": ["./src/app/[lang]/(others)/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
