--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev --dir src/emails"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.4.2",
+    "@react-email/button": "0.0.11",
+    "@react-email/components": "^0.0.11",
+    "@react-email/html": "0.0.6",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -21,6 +24,8 @@
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "1.9.5",
+    "resend": "^2.0.0",
     "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
