--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
       "@routes/*": ["./src/routes/*"],
       "@others/*": ["./src/app/[lang]/(others)/*"],
       "@legales/*": ["./src/app/[lang]/(legales)/*"],
+      "@emails/*": ["./src/emails/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
