--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "email": "email dev --dir src/emails"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.2",
     "@react-email/button": "0.0.11",
     "@react-email/components": "^0.0.11",
     "@react-email/html": "0.0.6",
