--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@types/react-google-recaptcha": "^2.1.8",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
-    "eslint-config-next": "^13.5.2",
+    "eslint-config-next": "^14.0.2",
     "negotiator": "^0.6.3",
-    "next": "^13.5.2",
-    "postcss": "8.4.27",
+    "next": "^14.0.2",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
