refactor: all contact us and your sections and your components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
       "@legales/*": ["./src/app/[lang]/(legales)/*"],
       "@emails/*": ["./src/emails/*"],
       "@scripts/*": ["./src/app/scripts/*"],
+      "@utils/*": ["./src/utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
