--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-google-recaptcha": "^3.1.0",
     "resend": "^2.0.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
