refactor: all components, pages and sections

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,23 +21,24 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@icons/*": ["./src/app/ui/components/Icons/*"],
-      "@public/*": ["./public/*"],
-      "@src/*": ["./src/*"],
-      "@context/*": ["./src/app/context/*"],
       "@constans/*": ["./src/app/constans/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@ui/*": ["./src/app/ui/*"],
-      "@inicio/*": ["./src/app/[lang]/(inicio)/*"],
       "@contacto/*": ["./src/app/[lang]/(contacto)/*"],
-      "@nosotros/*": ["./src/app/[lang]/(nosotros)/*"],
-      "@servicios/*": ["./src/app/[lang]/(servicios)/*"],
+      "@context/*": ["./src/app/context/*"],
+      "@emails/*": ["./src/emails/*"],
       "@globals/*": ["./src/app/[lang]/globals.css"],
       "@hooks/*": ["./src/app/hooks/*"],
-      "@routes/*": ["./src/routes/*"],
+      "@icons/*": ["./src/app/ui/components/Icons/*"],
+      "@inicio/*": ["./src/app/[lang]/(inicio)/*"],
       "@legales/*": ["./src/app/[lang]/(legales)/*"],
-      "@emails/*": ["./src/emails/*"],
+      "@lib/*": ["./src/lib/*"],
+      "@nosotros/*": ["./src/app/[lang]/(nosotros)/*"],
+      "@public/*": ["./public/*"],
+      "@rastreo/*": ["./src/app/[lang]/(rastreo)/*"],
+      "@routes/*": ["./src/routes/*"],
       "@scripts/*": ["./src/app/scripts/*"],
+      "@servicios/*": ["./src/app/[lang]/(servicios)/*"],
+      "@src/*": ["./src/*"],
+      "@ui/*": ["./src/app/ui/*"],
       "@utils/*": ["./src/utils/*"],
     }
   },
