--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites":  [
-    {"source": "/es/(.*)", "destination": "/es"},
-    {"source": "/en/(.*)", "destination": "/en"}
+    {"source": "/es/nosotros/(.*)", "destination": "/es"},
+    {"source": "/en/about-us/(.*)", "destination": "/en"}
   ]
 }
