--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "@types/react-google-recaptcha": "^2.1.8",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "^14.0.2",
